Correct video overflowing from header
Enclosing block must be positioned or the iframe gets on top of it.

--- a/src/styles/layout/_header_video.scss
+++ b/src/styles/layout/_header_video.scss
@@ -1,13 +1,10 @@
 header.masthead-video  {
   position: relative;
 
-  .cover {
+  .tv, .cover {
     position: absolute;
     top: 0;
     left: 0;
-  }
-
-  .tv, .cover {
     width: 100%;
     height: 100%;
     overflow: hidden;
